--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-     "name": "my_package",
+     "name": "Templates plugin",
      "description": "Custom Templates plugin",
      "version": "1.0.0",
      "author": "vaibhav malhotra",
